syntax = "proto3"; 

option csharp_namespace = "BlazorApp1.Shared"; 
package WeatherForecast; 
import "google/protobuf/timestamp.proto"; 

// google.protobuf.Empty

service WeatherForecasts { 
	rpc GetWeather (WeatherRequest) returns (WeatherReply); 
} 

message WeatherRequest {}

message WeatherReply { 
	repeated WeatherForecast forecasts = 1; 
} 

message WeatherForecast { 
	google.protobuf.Timestamp dateTimeStamp = 1; 
	int32 temperatureC = 2; 
	string summary = 3; 
}
